# Story_Scout

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  critic_agent.py  explanation_agent.py  graph.py  memory_agent.py  preference_agent.py  reading_coach_agent.py  recommendation_agent.py  state.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/data/: seed_books.json
backend/app/llm/: __init__.py  provider.py
backend/app/mlops/: __init__.py  prompts.py  tracking.py
backend/app/models/: __init__.py  author.py  book.py  feedback.py  genre.py  reading_history.py  recommendation.py  user.py  user_preference.py
backend/app/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
backend/app/repositories/: __init__.py  base.py  book.py  feedback.py  reading_history.py  recommendation.py  user.py
backend/app/schemas/: __init__.py  auth.py  book.py  chat.py  feedback.py  library.py  user.py
backend/app/services/: __init__.py  auth_service.py  book_service.py  chat_service.py  dashboard_service.py  feedback_service.py  (+3 more)
backend/scripts/: __init__.py  ingest_openlibrary.py  seed.py
backend/tests/: conftest.py  test_agents.py  test_auth_api.py  test_books_chat_api.py  test_security.py
(+49 files in other folders)
